--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_green_8h.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_green_8h.tex
@@ -2,7 +2,7 @@
 \label{_green_8h}\index{Green.h@{Green.h}}
 {\ttfamily \#include \char`\"{}regtypes.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}Light\+Control.\+h\char`\"{}}\newline
-{\ttfamily \#include \char`\"{}Yellow.\+h\char`\"{}}\newline
+{\ttfamily \#include \char`\"{}Amber.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}User\+LEDs.\+h\char`\"{}}\newline
 {\ttfamily \#include $<$iostream$>$}\newline
 \doxysubsection*{Classes}
