--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_off_8h_source.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_off_8h_source.tex
@@ -16,16 +16,19 @@
 \DoxyCodeLine{20 \{}
 \DoxyCodeLine{21 \textcolor{keyword}{private}:}
 \DoxyCodeLine{22   \mbox{\hyperlink{class_user_l_e_ds}{UserLEDs}} myLED;}
-\DoxyCodeLine{23 \textcolor{keyword}{public}:}
-\DoxyCodeLine{29   \mbox{\hyperlink{class_off_ab15f2edd889274f676f3d724f7a4c462}{Off}}()\{\}}
-\DoxyCodeLine{30   }
-\DoxyCodeLine{37   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_off_aad93bf7e4e6e337ebc024cc451d5860c}{Handle}}();}
-\DoxyCodeLine{38   }
-\DoxyCodeLine{44   \mbox{\hyperlink{class_light_control}{LightControl}}* \mbox{\hyperlink{class_off_a35a9e36a75c127ecdd0c085d6c9f03a9}{nextstate}}();}
-\DoxyCodeLine{45   }
-\DoxyCodeLine{46 \};}
-\DoxyCodeLine{47 }
-\DoxyCodeLine{48 }
-\DoxyCodeLine{49 \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{23 }
+\DoxyCodeLine{29   \textcolor{keyword}{static} \mbox{\hyperlink{class_off}{Off}} *Instance;}
+\DoxyCodeLine{30 }
+\DoxyCodeLine{36   \mbox{\hyperlink{class_off}{Off}}() \{\}}
+\DoxyCodeLine{37 }
+\DoxyCodeLine{38 \textcolor{keyword}{public}:}
+\DoxyCodeLine{45   \textcolor{keyword}{static} \mbox{\hyperlink{class_off}{Off}} *\mbox{\hyperlink{class_off_af7c91c1f67a4c904d0ae32de219a2552}{GetInstance}}();}
+\DoxyCodeLine{46 }
+\DoxyCodeLine{53   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_off_aad93bf7e4e6e337ebc024cc451d5860c}{Handle}}();}
+\DoxyCodeLine{54 }
+\DoxyCodeLine{60   \mbox{\hyperlink{class_light_control}{LightControl}} *\mbox{\hyperlink{class_off_a35a9e36a75c127ecdd0c085d6c9f03a9}{nextstate}}();}
+\DoxyCodeLine{61 \};}
+\DoxyCodeLine{62 }
+\DoxyCodeLine{63 \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
