--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/active_8h_source.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/active_8h_source.tex
@@ -19,17 +19,19 @@
 \DoxyCodeLine{23   \textcolor{keywordtype}{bool} buttonReset = \textcolor{keyword}{true};}
 \DoxyCodeLine{24   \mbox{\hyperlink{class_user_buttons}{UserButtons}} button;}
 \DoxyCodeLine{25   \mbox{\hyperlink{class_light_control}{LightControl}} *myLightControl;}
-\DoxyCodeLine{26 \textcolor{keyword}{public}:}
-\DoxyCodeLine{32   \mbox{\hyperlink{classactive_a6b3fa7f95ccdf561ae5cf176df6757b7}{active}}(\mbox{\hyperlink{class_light_control}{LightControl}} *myLightControl = \textcolor{keyword}{new} \mbox{\hyperlink{class_red}{Red}}()) : myLightControl(myLightControl) \{\}}
-\DoxyCodeLine{33   }
-\DoxyCodeLine{40   \textcolor{keywordtype}{void} \mbox{\hyperlink{classactive_a21a9291c598c433f82aa0dd793827c45}{Handle}}();}
-\DoxyCodeLine{41   }
-\DoxyCodeLine{47   \mbox{\hyperlink{classstate}{state}}* \mbox{\hyperlink{classactive_aaf7b87d296131493e7b1138d7dff4429}{nextstate}}();}
-\DoxyCodeLine{48 }
-\DoxyCodeLine{49   }
-\DoxyCodeLine{50 \};}
-\DoxyCodeLine{51 }
-\DoxyCodeLine{52 }
-\DoxyCodeLine{53 \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{26 }
+\DoxyCodeLine{32   \textcolor{keyword}{static} \mbox{\hyperlink{classactive}{active}} *Instance;}
+\DoxyCodeLine{33 }
+\DoxyCodeLine{39   \mbox{\hyperlink{classactive}{active}}(\mbox{\hyperlink{class_light_control}{LightControl}} *myLightControl = \mbox{\hyperlink{class_red_a93011c370026687116f5004db3ce5d15}{Red::GetInstance}}()) : myLightControl(myLightControl) \{\}}
+\DoxyCodeLine{40 }
+\DoxyCodeLine{41 \textcolor{keyword}{public}:}
+\DoxyCodeLine{48   \textcolor{keyword}{static} \mbox{\hyperlink{classactive}{active}} *\mbox{\hyperlink{classactive_abb74ff2f26a1e80e732947de1e43ab3c}{GetInstance}}();}
+\DoxyCodeLine{49 }
+\DoxyCodeLine{56   \textcolor{keywordtype}{void} \mbox{\hyperlink{classactive_a21a9291c598c433f82aa0dd793827c45}{Handle}}();}
+\DoxyCodeLine{57 }
+\DoxyCodeLine{63   \mbox{\hyperlink{classstate}{state}} *\mbox{\hyperlink{classactive_aaf7b87d296131493e7b1138d7dff4429}{nextstate}}();}
+\DoxyCodeLine{64 \};}
+\DoxyCodeLine{65 }
+\DoxyCodeLine{66 \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
