--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/class_amber.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/class_amber.tex
@@ -13,11 +13,14 @@ Inheritance diagram for Amber\+:\begin{figure}[H]
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{class_amber_aebd10227577448c7eb8b580d9284f6de}{Amber}} ()
-\item 
 void \mbox{\hyperlink{class_amber_ab07c8f16bf0a36c9b0ce49fc2fcb67a0}{Handle}} ()
 \item 
 \mbox{\hyperlink{class_light_control}{Light\+Control}} $\ast$ \mbox{\hyperlink{class_amber_a089ac18a2fe9c82c70927d1a6b42fe93}{nextstate}} ()
+\end{DoxyCompactItemize}
+\doxysubsection*{Static Public Member Functions}
+\begin{DoxyCompactItemize}
+\item 
+static \mbox{\hyperlink{class_amber}{Amber}} $\ast$ \mbox{\hyperlink{class_amber_a7a58dd83749d0f82d804956fa9175bde}{Get\+Instance}} ()
 \end{DoxyCompactItemize}
 
 
@@ -30,14 +33,14 @@ May 2022
 \end{DoxyDate}
 
 
-\doxysubsection{Constructor \& Destructor Documentation}
-\mbox{\Hypertarget{class_amber_aebd10227577448c7eb8b580d9284f6de}\label{class_amber_aebd10227577448c7eb8b580d9284f6de}} 
-\index{Amber@{Amber}!Amber@{Amber}}
-\index{Amber@{Amber}!Amber@{Amber}}
-\doxysubsubsection{\texorpdfstring{Amber()}{Amber()}}
-{\footnotesize\ttfamily Amber\+::\+Amber (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{class_amber_a7a58dd83749d0f82d804956fa9175bde}\label{class_amber_a7a58dd83749d0f82d804956fa9175bde}} 
+\index{Amber@{Amber}!GetInstance@{GetInstance}}
+\index{GetInstance@{GetInstance}!Amber@{Amber}}
+\doxysubsubsection{\texorpdfstring{GetInstance()}{GetInstance()}}
+{\footnotesize\ttfamily \mbox{\hyperlink{class_amber}{Amber}} $\ast$ Amber\+::\+Get\+Instance (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [static]}}
 
-Constructor of \char`\"{}\+Amber\char`\"{}-\/class. 
+Static singleton access method. Controls the LED states. 
 \begin{DoxyParams}{Parameters}
 {\em None} & \\
 \hline
@@ -45,9 +48,6 @@ Constructor of \char`\"{}\+Amber\char`\"{}-\/class.
 \begin{DoxyReturn}{Returns}
 None 
 \end{DoxyReturn}
-
-
-\doxysubsection{Member Function Documentation}
 \mbox{\Hypertarget{class_amber_ab07c8f16bf0a36c9b0ce49fc2fcb67a0}\label{class_amber_ab07c8f16bf0a36c9b0ce49fc2fcb67a0}} 
 \index{Amber@{Amber}!Handle@{Handle}}
 \index{Handle@{Handle}!Amber@{Amber}}
