--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/flashing_8h.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/flashing_8h.tex
@@ -3,8 +3,8 @@
 {\ttfamily \#include \char`\"{}regtypes.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}state.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}Light\+Control.\+h\char`\"{}}\newline
-{\ttfamily \#include \char`\"{}Aus.\+h\char`\"{}}\newline
-{\ttfamily \#include \char`\"{}Yellow.\+h\char`\"{}}\newline
+{\ttfamily \#include \char`\"{}Off.\+h\char`\"{}}\newline
+{\ttfamily \#include \char`\"{}Amber.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}active.\+h\char`\"{}}\newline
 {\ttfamily \#include $<$iostream$>$}\newline
 \doxysubsection*{Classes}
