--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_amber_8h_source.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_amber_8h_source.tex
@@ -18,15 +18,18 @@
 \DoxyCodeLine{22 \textcolor{keyword}{private}:}
 \DoxyCodeLine{23   \mbox{\hyperlink{class_user_l_e_ds}{UserLEDs}} myLED;}
 \DoxyCodeLine{24 }
-\DoxyCodeLine{25 \textcolor{keyword}{public}:}
-\DoxyCodeLine{31   \mbox{\hyperlink{class_amber_aebd10227577448c7eb8b580d9284f6de}{Amber}}()\{\}}
-\DoxyCodeLine{32   }
-\DoxyCodeLine{39   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_amber_ab07c8f16bf0a36c9b0ce49fc2fcb67a0}{Handle}}();}
-\DoxyCodeLine{40   }
-\DoxyCodeLine{46   \mbox{\hyperlink{class_light_control}{LightControl}}* \mbox{\hyperlink{class_amber_a089ac18a2fe9c82c70927d1a6b42fe93}{nextstate}}(); }
-\DoxyCodeLine{47 \};}
-\DoxyCodeLine{48 }
-\DoxyCodeLine{49 }
-\DoxyCodeLine{50 \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{30   \textcolor{keyword}{static} \mbox{\hyperlink{class_amber}{Amber}} *Instance;}
+\DoxyCodeLine{31 }
+\DoxyCodeLine{37   \mbox{\hyperlink{class_amber}{Amber}}() \{\}}
+\DoxyCodeLine{38 }
+\DoxyCodeLine{39 \textcolor{keyword}{public}:}
+\DoxyCodeLine{46   \textcolor{keyword}{static} \mbox{\hyperlink{class_amber}{Amber}} *\mbox{\hyperlink{class_amber_a7a58dd83749d0f82d804956fa9175bde}{GetInstance}}();}
+\DoxyCodeLine{47 }
+\DoxyCodeLine{54   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_amber_ab07c8f16bf0a36c9b0ce49fc2fcb67a0}{Handle}}();}
+\DoxyCodeLine{55 }
+\DoxyCodeLine{61   \mbox{\hyperlink{class_light_control}{LightControl}} *\mbox{\hyperlink{class_amber_a089ac18a2fe9c82c70927d1a6b42fe93}{nextstate}}();}
+\DoxyCodeLine{62 \};}
+\DoxyCodeLine{63 }
+\DoxyCodeLine{64 \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
