--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_green_8h_source.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_green_8h_source.tex
@@ -7,7 +7,7 @@
 \DoxyCodeLine{5 }
 \DoxyCodeLine{6 \textcolor{preprocessor}{\#include "{}\mbox{\hyperlink{regtypes_8h}{regtypes.h}}"{}}}
 \DoxyCodeLine{7 \textcolor{preprocessor}{\#include "{}\mbox{\hyperlink{_light_control_8h}{LightControl.h}}"{}}}
-\DoxyCodeLine{8 \textcolor{preprocessor}{\#include "{}Yellow.h"{}}}
+\DoxyCodeLine{8 \textcolor{preprocessor}{\#include "{}\mbox{\hyperlink{_amber_8h}{Amber.h}}"{}}}
 \DoxyCodeLine{9 \textcolor{preprocessor}{\#include "{}\mbox{\hyperlink{_user_l_e_ds_8h}{UserLEDs.h}}"{}}}
 \DoxyCodeLine{10 \textcolor{preprocessor}{\#include <iostream>}}
 \DoxyCodeLine{11 }
@@ -18,15 +18,18 @@
 \DoxyCodeLine{22 \textcolor{keyword}{private}:}
 \DoxyCodeLine{23   \mbox{\hyperlink{class_user_l_e_ds}{UserLEDs}} myLED;}
 \DoxyCodeLine{24 }
-\DoxyCodeLine{25 \textcolor{keyword}{public}:}
-\DoxyCodeLine{31   \mbox{\hyperlink{class_green_a7cab789a98cb94ed2981ff58390b8d45}{Green}}()\{\}}
-\DoxyCodeLine{32   }
-\DoxyCodeLine{39   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_green_a21e8dcd4f5f996035dc3213f2b233478}{Handle}}();}
-\DoxyCodeLine{40   }
-\DoxyCodeLine{46   \mbox{\hyperlink{class_light_control}{LightControl}}* \mbox{\hyperlink{class_green_a944ef9fc86e63dbbd11477f8bfbaf5d6}{nextstate}}(); }
-\DoxyCodeLine{47 \};}
-\DoxyCodeLine{48 }
-\DoxyCodeLine{49 }
-\DoxyCodeLine{50 \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{30   \textcolor{keyword}{static} \mbox{\hyperlink{class_green}{Green}} *Instance;}
+\DoxyCodeLine{31 }
+\DoxyCodeLine{37   \mbox{\hyperlink{class_green}{Green}}() \{\}}
+\DoxyCodeLine{38 }
+\DoxyCodeLine{39 \textcolor{keyword}{public}:}
+\DoxyCodeLine{46   \textcolor{keyword}{static} \mbox{\hyperlink{class_green}{Green}} *\mbox{\hyperlink{class_green_afd30ef1925478804a99d1c096058786e}{GetInstance}}();}
+\DoxyCodeLine{47 }
+\DoxyCodeLine{54   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_green_a21e8dcd4f5f996035dc3213f2b233478}{Handle}}();}
+\DoxyCodeLine{55 }
+\DoxyCodeLine{61   \mbox{\hyperlink{class_light_control}{LightControl}} *\mbox{\hyperlink{class_green_a944ef9fc86e63dbbd11477f8bfbaf5d6}{nextstate}}();}
+\DoxyCodeLine{62 \};}
+\DoxyCodeLine{63 }
+\DoxyCodeLine{64 \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
