--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_red_8h_source.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_red_8h_source.tex
@@ -7,7 +7,7 @@
 \DoxyCodeLine{5 }
 \DoxyCodeLine{6 \textcolor{preprocessor}{\#include "{}\mbox{\hyperlink{regtypes_8h}{regtypes.h}}"{}}}
 \DoxyCodeLine{7 \textcolor{preprocessor}{\#include "{}\mbox{\hyperlink{_light_control_8h}{LightControl.h}}"{}}}
-\DoxyCodeLine{8 \textcolor{preprocessor}{\#include "{}RedYellow.h"{}}}
+\DoxyCodeLine{8 \textcolor{preprocessor}{\#include "{}\mbox{\hyperlink{_red_amber_8h}{RedAmber.h}}"{}}}
 \DoxyCodeLine{9 \textcolor{preprocessor}{\#include "{}\mbox{\hyperlink{_user_l_e_ds_8h}{UserLEDs.h}}"{}}}
 \DoxyCodeLine{10 \textcolor{preprocessor}{\#include <iostream>}}
 \DoxyCodeLine{11 }
@@ -18,15 +18,18 @@
 \DoxyCodeLine{22 \textcolor{keyword}{private}:}
 \DoxyCodeLine{23   \mbox{\hyperlink{class_user_l_e_ds}{UserLEDs}} myLED;}
 \DoxyCodeLine{24 }
-\DoxyCodeLine{25 \textcolor{keyword}{public}:}
-\DoxyCodeLine{31   \mbox{\hyperlink{class_red_ac010a2bcec6571efb9ab8caa00914e56}{Red}}()\{\}}
-\DoxyCodeLine{32   }
-\DoxyCodeLine{39   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_red_a92d53b257871cc9b1b700caa807ff35d}{Handle}}();}
-\DoxyCodeLine{40   }
-\DoxyCodeLine{46   \mbox{\hyperlink{class_light_control}{LightControl}}* \mbox{\hyperlink{class_red_a215cab4fcb42967418f5434f4349fd4b}{nextstate}}(); }
-\DoxyCodeLine{47 \};}
-\DoxyCodeLine{48 }
-\DoxyCodeLine{49 }
-\DoxyCodeLine{50 \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{30   \textcolor{keyword}{static} \mbox{\hyperlink{class_red}{Red}} *Instance;}
+\DoxyCodeLine{31 }
+\DoxyCodeLine{37   \mbox{\hyperlink{class_red}{Red}}()\{\};}
+\DoxyCodeLine{38 }
+\DoxyCodeLine{39 \textcolor{keyword}{public}:}
+\DoxyCodeLine{46   \textcolor{keyword}{static} \mbox{\hyperlink{class_red}{Red}} *\mbox{\hyperlink{class_red_a93011c370026687116f5004db3ce5d15}{GetInstance}}();}
+\DoxyCodeLine{47 }
+\DoxyCodeLine{54   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_red_a92d53b257871cc9b1b700caa807ff35d}{Handle}}();}
+\DoxyCodeLine{55 }
+\DoxyCodeLine{61   \mbox{\hyperlink{class_light_control}{LightControl}} *\mbox{\hyperlink{class_red_a215cab4fcb42967418f5434f4349fd4b}{nextstate}}();}
+\DoxyCodeLine{62 \};}
+\DoxyCodeLine{63 }
+\DoxyCodeLine{64 \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
