--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_red_amber_8h_source.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_red_amber_8h_source.tex
@@ -18,15 +18,18 @@
 \DoxyCodeLine{22 \textcolor{keyword}{private}:}
 \DoxyCodeLine{23   \mbox{\hyperlink{class_user_l_e_ds}{UserLEDs}} myLED;}
 \DoxyCodeLine{24 }
-\DoxyCodeLine{25 \textcolor{keyword}{public}:}
-\DoxyCodeLine{31   \mbox{\hyperlink{class_red_amber_a040610494ddf5477d2a3831daf33cc70}{RedAmber}}()\{\}}
-\DoxyCodeLine{32   }
-\DoxyCodeLine{39   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_red_amber_aed5f0a2bf63b14e3e4ccc42f5d04565e}{Handle}}();}
-\DoxyCodeLine{40   }
-\DoxyCodeLine{46   \mbox{\hyperlink{class_light_control}{LightControl}}* \mbox{\hyperlink{class_red_amber_adf027f4b97e6ffe933a4696ebcd2409d}{nextstate}}(); }
-\DoxyCodeLine{47 \};}
-\DoxyCodeLine{48 }
-\DoxyCodeLine{49 }
-\DoxyCodeLine{50 \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{30   \textcolor{keyword}{static} \mbox{\hyperlink{class_red_amber}{RedAmber}} *Instance;}
+\DoxyCodeLine{31 }
+\DoxyCodeLine{37   \mbox{\hyperlink{class_red_amber}{RedAmber}}() \{\}}
+\DoxyCodeLine{38 }
+\DoxyCodeLine{39 \textcolor{keyword}{public}:}
+\DoxyCodeLine{46   \textcolor{keyword}{static} \mbox{\hyperlink{class_red_amber}{RedAmber}} *\mbox{\hyperlink{class_red_amber_a50f205020216c25eff5cb799eac729c7}{GetInstance}}();}
+\DoxyCodeLine{47 }
+\DoxyCodeLine{54   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_red_amber_aed5f0a2bf63b14e3e4ccc42f5d04565e}{Handle}}();}
+\DoxyCodeLine{55 }
+\DoxyCodeLine{61   \mbox{\hyperlink{class_light_control}{LightControl}} *\mbox{\hyperlink{class_red_amber_adf027f4b97e6ffe933a4696ebcd2409d}{nextstate}}();}
+\DoxyCodeLine{62 \};}
+\DoxyCodeLine{63 }
+\DoxyCodeLine{64 \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
