--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_traffic_light_8h_source.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_traffic_light_8h_source.tex
@@ -14,20 +14,19 @@
 \DoxyCodeLine{12 }
 \DoxyCodeLine{19 \textcolor{keyword}{class }\mbox{\hyperlink{class_traffic_light}{TrafficLight}}}
 \DoxyCodeLine{20 \{}
-\DoxyCodeLine{21   \textcolor{keywordtype}{bool} buttonReset = \textcolor{keyword}{true};}
-\DoxyCodeLine{22   \mbox{\hyperlink{class_user_buttons}{UserButtons}} button;}
-\DoxyCodeLine{23   \mbox{\hyperlink{classstate}{state}} *mystate;}
-\DoxyCodeLine{24   \textcolor{comment}{//flashing myflashing;}}
-\DoxyCodeLine{25   \textcolor{comment}{//active myactive;}}
-\DoxyCodeLine{26   }
-\DoxyCodeLine{27 \textcolor{keyword}{public}:}
-\DoxyCodeLine{33   \mbox{\hyperlink{class_traffic_light_a1df0094e12b7d0939819f80a7705ee7a}{TrafficLight}}(\mbox{\hyperlink{classstate}{state}} *mystate = \textcolor{keyword}{new} \mbox{\hyperlink{classflashing}{flashing}}()) : mystate(mystate) \{\}}
-\DoxyCodeLine{34   }
-\DoxyCodeLine{40   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_traffic_light_a5aa2c404f01a20a59b1607862ee0af98}{Handle}}();}
-\DoxyCodeLine{41   }
+\DoxyCodeLine{21 \textcolor{keyword}{private}:}
+\DoxyCodeLine{22   \textcolor{keywordtype}{bool} buttonReset = \textcolor{keyword}{true};}
+\DoxyCodeLine{23   \mbox{\hyperlink{class_user_buttons}{UserButtons}} button;}
+\DoxyCodeLine{24   \mbox{\hyperlink{classstate}{state}} *mystate;}
+\DoxyCodeLine{25   \textcolor{comment}{// flashing myflashing;}}
+\DoxyCodeLine{26   \textcolor{comment}{// active myactive;}}
+\DoxyCodeLine{27 }
+\DoxyCodeLine{28 \textcolor{keyword}{public}:}
+\DoxyCodeLine{34   \mbox{\hyperlink{class_traffic_light_a692aa225f2e9b38023b73292e29b6b9e}{TrafficLight}}(\mbox{\hyperlink{classstate}{state}} *mystate = \mbox{\hyperlink{classactive_abb74ff2f26a1e80e732947de1e43ab3c}{active::GetInstance}}()) : mystate(mystate) \{\}}
+\DoxyCodeLine{35 }
+\DoxyCodeLine{41   \mbox{\hyperlink{regtypes_8h_ab27e9918b538ce9d8ca692479b375b6a}{UINT8}} \mbox{\hyperlink{class_traffic_light_ab6626f9c352498252408e48057277dec}{Handle}}();}
 \DoxyCodeLine{42 \};}
 \DoxyCodeLine{43 }
-\DoxyCodeLine{44 }
-\DoxyCodeLine{45 \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{44 \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
