--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_user_l_e_ds_8h_source.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_user_l_e_ds_8h_source.tex
@@ -5,28 +5,33 @@
 \DoxyCodeLine{5 \textcolor{preprocessor}{\#ifndef UserLEDs\_H}}
 \DoxyCodeLine{6 \textcolor{preprocessor}{\#define UserLEDs\_H}}
 \DoxyCodeLine{7 }
-\DoxyCodeLine{8 \textcolor{preprocessor}{\#include "{}\mbox{\hyperlink{_g_p_i_o_8h}{GPIO.h}}"{}}}
-\DoxyCodeLine{9 \textcolor{preprocessor}{\#include "{}\mbox{\hyperlink{regtypes_8h}{regtypes.h}}"{}}}
-\DoxyCodeLine{15 \textcolor{keyword}{class }\mbox{\hyperlink{class_user_l_e_ds}{UserLEDs}}}
-\DoxyCodeLine{16 \{}
-\DoxyCodeLine{17 \textcolor{keyword}{private}:}
-\DoxyCodeLine{18   \mbox{\hyperlink{class_g_p_i_o}{GPIO}} myGPIOA;}
-\DoxyCodeLine{19   UINT32 PinRed;}
-\DoxyCodeLine{20   UINT32 PinAmber;}
-\DoxyCodeLine{21   UINT32 PinGreen;}
-\DoxyCodeLine{22 \textcolor{keyword}{public}:}
-\DoxyCodeLine{29   \mbox{\hyperlink{class_user_l_e_ds_a7b2c1512afd5caf1b6f0c56235e26aee}{UserLEDs}}();}
-\DoxyCodeLine{30   }
-\DoxyCodeLine{36   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_user_l_e_ds_a01a35acd623739146686c5f3fe2d4e65}{redLED}}(\textcolor{keywordtype}{bool} \mbox{\hyperlink{classstate}{state}});}
-\DoxyCodeLine{37   }
-\DoxyCodeLine{43   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_user_l_e_ds_ac1f9b3b537777314bbbcffdf92462d08}{amberLED}}(\textcolor{keywordtype}{bool} \mbox{\hyperlink{classstate}{state}});}
-\DoxyCodeLine{44   }
-\DoxyCodeLine{50   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_user_l_e_ds_abbb03fe6cb39a8805069968ce334a19b}{greenLED}}(\textcolor{keywordtype}{bool} \mbox{\hyperlink{classstate}{state}});}
-\DoxyCodeLine{51   }
-\DoxyCodeLine{58   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_user_l_e_ds_a48a46f0eb8f3575ecb1958041e22b824}{amberLEDToggle}}(\textcolor{keywordtype}{bool} \mbox{\hyperlink{classstate}{state}});}
-\DoxyCodeLine{59   }
-\DoxyCodeLine{65   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_user_l_e_ds_af39a103a81c38419434c6cec292a9d06}{allLEDs}}(\textcolor{keywordtype}{bool} \mbox{\hyperlink{classstate}{state}});}
-\DoxyCodeLine{66 \};}
-\DoxyCodeLine{67 \textcolor{preprocessor}{\#endif }\textcolor{comment}{//UserLEDs\_H}}
+\DoxyCodeLine{8 \textcolor{preprocessor}{\#include <iostream>}}
+\DoxyCodeLine{9 \textcolor{preprocessor}{\#include "{}\mbox{\hyperlink{_g_p_i_o_8h}{GPIO.h}}"{}}}
+\DoxyCodeLine{10 \textcolor{preprocessor}{\#include "{}\mbox{\hyperlink{regtypes_8h}{regtypes.h}}"{}}}
+\DoxyCodeLine{11 }
+\DoxyCodeLine{12 \textcolor{keyword}{using namespace }std;}
+\DoxyCodeLine{13 }
+\DoxyCodeLine{19 \textcolor{keyword}{class }\mbox{\hyperlink{class_user_l_e_ds}{UserLEDs}}}
+\DoxyCodeLine{20 \{}
+\DoxyCodeLine{21 \textcolor{keyword}{private}:}
+\DoxyCodeLine{22   \mbox{\hyperlink{class_g_p_i_o}{GPIO}} myGPIOA;}
+\DoxyCodeLine{23   UINT32 PinRed;}
+\DoxyCodeLine{24   UINT32 PinAmber;}
+\DoxyCodeLine{25   UINT32 PinGreen;}
+\DoxyCodeLine{26   \textcolor{keywordtype}{bool} toggle;}
+\DoxyCodeLine{27 \textcolor{keyword}{public}:}
+\DoxyCodeLine{34   \mbox{\hyperlink{class_user_l_e_ds_a7b2c1512afd5caf1b6f0c56235e26aee}{UserLEDs}}();}
+\DoxyCodeLine{35   }
+\DoxyCodeLine{41   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_user_l_e_ds_a01a35acd623739146686c5f3fe2d4e65}{redLED}}(\textcolor{keywordtype}{bool} \mbox{\hyperlink{classstate}{state}});}
+\DoxyCodeLine{42   }
+\DoxyCodeLine{48   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_user_l_e_ds_ac1f9b3b537777314bbbcffdf92462d08}{amberLED}}(\textcolor{keywordtype}{bool} \mbox{\hyperlink{classstate}{state}});}
+\DoxyCodeLine{49   }
+\DoxyCodeLine{55   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_user_l_e_ds_abbb03fe6cb39a8805069968ce334a19b}{greenLED}}(\textcolor{keywordtype}{bool} \mbox{\hyperlink{classstate}{state}});}
+\DoxyCodeLine{56   }
+\DoxyCodeLine{63   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_user_l_e_ds_a48a46f0eb8f3575ecb1958041e22b824}{amberLEDToggle}}(\textcolor{keywordtype}{bool} \mbox{\hyperlink{classstate}{state}});}
+\DoxyCodeLine{64   }
+\DoxyCodeLine{70   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_user_l_e_ds_af39a103a81c38419434c6cec292a9d06}{allLEDs}}(\textcolor{keywordtype}{bool} \mbox{\hyperlink{classstate}{state}});}
+\DoxyCodeLine{71 \};}
+\DoxyCodeLine{72 \textcolor{preprocessor}{\#endif }\textcolor{comment}{//UserLEDs\_H}}
 
 \end{DoxyCode}
