--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/class_traffic_light.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/class_traffic_light.tex
@@ -7,9 +7,9 @@
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{class_traffic_light_a1df0094e12b7d0939819f80a7705ee7a}{Traffic\+Light}} (\mbox{\hyperlink{classstate}{state}} $\ast$mystate=new \mbox{\hyperlink{classflashing}{flashing}}())
+\mbox{\hyperlink{class_traffic_light_a692aa225f2e9b38023b73292e29b6b9e}{Traffic\+Light}} (\mbox{\hyperlink{classstate}{state}} $\ast$mystate=\mbox{\hyperlink{classactive_abb74ff2f26a1e80e732947de1e43ab3c}{active\+::\+Get\+Instance}}())
 \item 
-void \mbox{\hyperlink{class_traffic_light_a5aa2c404f01a20a59b1607862ee0af98}{Handle}} ()
+\mbox{\hyperlink{regtypes_8h_ab27e9918b538ce9d8ca692479b375b6a}{UINT8}} \mbox{\hyperlink{class_traffic_light_ab6626f9c352498252408e48057277dec}{Handle}} ()
 \end{DoxyCompactItemize}
 
 
@@ -23,11 +23,11 @@ May 2022
 
 
 \doxysubsection{Constructor \& Destructor Documentation}
-\mbox{\Hypertarget{class_traffic_light_a1df0094e12b7d0939819f80a7705ee7a}\label{class_traffic_light_a1df0094e12b7d0939819f80a7705ee7a}} 
+\mbox{\Hypertarget{class_traffic_light_a692aa225f2e9b38023b73292e29b6b9e}\label{class_traffic_light_a692aa225f2e9b38023b73292e29b6b9e}} 
 \index{TrafficLight@{TrafficLight}!TrafficLight@{TrafficLight}}
 \index{TrafficLight@{TrafficLight}!TrafficLight@{TrafficLight}}
 \doxysubsubsection{\texorpdfstring{TrafficLight()}{TrafficLight()}}
-{\footnotesize\ttfamily Traffic\+Light\+::\+Traffic\+Light (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{classstate}{state}} $\ast$}]{mystate = {\ttfamily new~\mbox{\hyperlink{classflashing}{flashing}}()} }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
+{\footnotesize\ttfamily Traffic\+Light\+::\+Traffic\+Light (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{classstate}{state}} $\ast$}]{mystate = {\ttfamily \mbox{\hyperlink{classactive_abb74ff2f26a1e80e732947de1e43ab3c}{active\+::\+Get\+Instance}}()} }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
 
 Constructor of \char`\"{}\+Traffic\+Light\char`\"{}-\/class. 
 \begin{DoxyParams}{Parameters}
@@ -40,11 +40,11 @@ None
 
 
 \doxysubsection{Member Function Documentation}
-\mbox{\Hypertarget{class_traffic_light_a5aa2c404f01a20a59b1607862ee0af98}\label{class_traffic_light_a5aa2c404f01a20a59b1607862ee0af98}} 
+\mbox{\Hypertarget{class_traffic_light_ab6626f9c352498252408e48057277dec}\label{class_traffic_light_ab6626f9c352498252408e48057277dec}} 
 \index{TrafficLight@{TrafficLight}!Handle@{Handle}}
 \index{Handle@{Handle}!TrafficLight@{TrafficLight}}
 \doxysubsubsection{\texorpdfstring{Handle()}{Handle()}}
-{\footnotesize\ttfamily void Traffic\+Light\+::\+Handle (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily \mbox{\hyperlink{regtypes_8h_ab27e9918b538ce9d8ca692479b375b6a}{UINT8}} Traffic\+Light\+::\+Handle (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
 Handle to switch between active and flashing state. 
 \begin{DoxyParams}{Parameters}
@@ -52,7 +52,7 @@ Handle to switch between active and flashing state.
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-None 
+zero for cancelling the program, otherwise it returns one 
 \end{DoxyReturn}
 
 
