--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/class_green.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/class_green.tex
@@ -40,7 +40,7 @@ May 2022
 \doxysubsubsection{\texorpdfstring{GetInstance()}{GetInstance()}}
 {\footnotesize\ttfamily \mbox{\hyperlink{class_green}{Green}} $\ast$ Green\+::\+Get\+Instance (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [static]}}
 
-Static singleton access method. Controls the LED states. 
+Static singleton access method. 
 \begin{DoxyParams}{Parameters}
 {\em None} & \\
 \hline
