--- a/Architekturkonzept/EmbeddedSystemsTEX_Sven/EmbeddedSystems.tex
+++ b/Architekturkonzept/EmbeddedSystemsTEX_Sven/EmbeddedSystems.tex
@@ -126,7 +126,7 @@
 \captionsetup[table]{font=small,position=above,skip=15pt}
 
 
-\fancyfoot[L]{Timo Kempf (20.06.2022) } % Fußzeile links bzw. innen
+\fancyfoot[L]{Sven Mößner (20.06.2022) } % Fußzeile links bzw. innen
 \fancyfoot[R]{\thepage} % Fußzeile rechts bzw. außen
 \renewcommand{\footrulewidth}{0.5pt} % Linie unten
 % === Ende: Seitenlayout Kopf & Fußzeile ======== 
@@ -265,10 +265,9 @@
 	% Inhaltsverzeichnis
 	\newpage
 	\pagenumbering{Roman}
-	\setcounter{page}{2}
+	\setcounter{page}{1}
 	\input{content//Ehrenwort.tex}
 	\newpage
-	\pagenumbering{Roman} % römische Seitenzahlen
 	\tableofcontents
 	\newpage
 
@@ -295,7 +294,7 @@
 	
 	
 	\pagenumbering{Roman}
-	\setcounter{page}{3}
+	\setcounter{page}{4}
 	%\addcontentsline{toc}{chapter}{Abkürzungsverzeichnis}
 	%\input{content/acronyms}
 	%\newpage
