--- a/Architekturkonzept/EmbeddedSystemsTEX_Timo/content/01.tex
+++ b/Architekturkonzept/EmbeddedSystemsTEX_Timo/content/01.tex
@@ -7,3 +7,21 @@ Die in diesem Projekt zu erstellende Ampel soll, wie auch die Ampeln im Straßen
 \section{Vorgehensweise}
 
 Die Vorgehensweise bei diesem Projekt orientiert sich an einem Leitfaden, welcher von der Dozentin Claudia Heß stammt. Zunächst werden die bereitgestellte Hardware analysiert und erste Vereinbarungen bezüglich der Pinbelegungen getroffen. Danach wird ein Styleguide angelegt. Dieser ist nötig um einen möglichst einheitlichen Code zu erhalten. Im nächsten Schritt wird dann eine Architektur entworfen um alle geforderten Funktionen zu erfüllen. Daraufhin werden verwendete State Patterns vorgestellt und erklärt. Zuletzt wird dann noch auf den Hardwarezugriff eingegangen, bevor gezeigt wird, wie der Wechsel zwischen Hardware- und Softwareschnittstelle erfolgt. Zum Schluss wird dann ein Fazit gezogen.
+
+\chapter{Arbeitsaufteilung}
+
+Diese Arbeitsaufteilung dient als grobe Orientierung der Beschäftigung unter den Teammitgliedern und ist in nachstehender \autoref{tab:Arbeitsaufteilung} dargestellt.\
+
+\begin{table}[H] 
+	\centering
+	\begin{tabular}[H]{c|c} \label{tab2}
+		Teammitglied & Aufgaben \\
+		\hline
+		Cedric Franke & Zustandsautomat, Singleton\\
+		Niklas Stein &  Wechsel zwischen Hardware- und Softwarebetrieb \\
+		Timo Kempf & Hardwarezugriff  \\
+		Sven Mößner & Klassendiagramm, Context, Interface und Concrete Klassen \\
+	\end{tabular}
+	\caption{Arbeitsaufteilung}
+	\label{tab:Arbeitsaufteilung}
+\end{table}
