Doxygen angepasst für finale Abgabeeeeeeeeeeeeeeeeee!

--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/classflashing.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/classflashing.tex
@@ -26,7 +26,7 @@ static \mbox{\hyperlink{classflashing}{flashing}} $\ast$ \mbox{\hyperlink{classf
 
 \doxysubsection{Detailed Description}
 Concrete state of interface class \char`\"{}state\char`\"{}. In this state the amber LED is flashing and the Traffic Light is in standby state. \begin{DoxyAuthor}{Author}
-Sven Moessner 
+Sven Moessner, Cedric Franke 
 \end{DoxyAuthor}
 \begin{DoxyDate}{Date}
 June 2022 
