--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/index.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/index.tex
@@ -1,7 +1,7 @@
 \hypertarget{index_Introduction}{}\doxysection{Introduction}\label{index_Introduction}
 This C++ project realizes a common traffic light, like it is used on the streets. The project language is english.\hypertarget{index_Basics}{}\doxysection{Basics}\label{index_Basics}
 There are two operating states\+: active and flashing (Standby). It can be switched between these states. But it also can be switched between Softwareinput and -\/output and Hardwareinput and -\/output. To switch between states there are state patterns. The concrete states of these state machines are implemented as singelton pattern. \begin{DoxyAuthor}{Author}
-Sven Moessner 
+Sven Moessner, Niklas Stein, Cedric Franke, Timo Kempf 
 \end{DoxyAuthor}
 \begin{DoxyDate}{Date}
 June 2022 
