--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_g_p_i_o_8h_source.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/_g_p_i_o_8h_source.tex
@@ -32,7 +32,7 @@
 \DoxyCodeLine{58 }
 \DoxyCodeLine{64   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_g_p_i_o_a8680c5efa75b7cb195a62065c8e0bbd3}{toggle\_bit}}(UINT32 pin);}
 \DoxyCodeLine{65 }
-\DoxyCodeLine{71   UINT32 \mbox{\hyperlink{class_g_p_i_o_afef57e8e22af49fa00a3808cf823b171}{read\_port}}();}
+\DoxyCodeLine{71   UINT32 \mbox{\hyperlink{class_g_p_i_o_afef57e8e22af49fa00a3808cf823b171}{read\_port}}()\{ \textcolor{keywordflow}{return} IDR; \};}
 \DoxyCodeLine{72 }
 \DoxyCodeLine{78   \textcolor{keywordtype}{void} \mbox{\hyperlink{class_g_p_i_o_a2b0bad71c58f61e0f7543781f737d659}{write\_port}}(UINT32 data);}
 \DoxyCodeLine{79 \};}
