--- a/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/classactive.tex
+++ b/Sven/TrafficLightControlV6/TrafficLightControlV4/latex/classactive.tex
@@ -26,7 +26,7 @@ static \mbox{\hyperlink{classactive}{active}} $\ast$ \mbox{\hyperlink{classactiv
 
 \doxysubsection{Detailed Description}
 Concrete state of interface class \char`\"{}state\char`\"{}. In this state the Traffic Light is in active state. \begin{DoxyAuthor}{Author}
-Sven Moessner 
+Sven Moessner, Cedric Franke 
 \end{DoxyAuthor}
 \begin{DoxyDate}{Date}
 June 2022 
